linked dictionary with hanzi

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ChooseFlashcardsActivity"></activity>
+        <activity android:name=".WordActivity"></activity>
+        <activity android:name=".ChooseFlashcardsActivity" />
         <activity android:name=".FlashcardsActivity" />
         <activity android:name=".HanziActivity" />
         <activity android:name=".DictionaryActivity" />
