--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CEActivity"></activity>
+        <activity android:name=".FavoritesActivity" />
+        <activity android:name=".CEActivity" />
         <activity android:name=".DictionaryActivity" />
         <activity android:name=".WordActivity" />
         <activity android:name=".ChooseFlashcardsActivity" />
